<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">dJAXdemoapp</string>
    <string name="settings_view_text">Banner Settings</string>
    <string name="preview_view_text">Banner Preview</string>
    <string name="request_view_text">Request and response methods</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="general">General</string>
    <string name="zone_id">Zone id:</string>
    <string name="ph_edit_zoneid">Enter the number only.</string>
    <string name="settings_txt_adtype">Ad Type:</string>
    <string name="load_ad_button">Load Ad</string>
    <string name="sample_code">Sample code:</string>
    <string name="log_title_applogs">Msdk Log</string>
    <string name="log_btn_email">Email Logs</string>
    <string name="last_request_url">Last Request URL</string>
    <string name="last_server_response">Last Server Response</string>
    <string name="request_text">Request will Load here</string>
    <string name="response_text">Response will load here</string>
    <string name="debug_msg_response_empty">Last Response is empty</string>
    <string name="settings_txt_size">Size:</string>
    <string-array name="size">
        <item>468x60</item>
        <item>300x250</item>
    	<item>320x50</item>        
        <item>480x320</item>
        <item>728x90</item>
        <item>320x480</item>
        <item>300x50</item>
        <item>1024x768</item>
        <item>168x28</item>
        <item>216x36</item>
    </string-array>    
    <string name="load_ad_button">Load Ad</string>
    <string name="settings_refresh_rate">Refresh rate:</string>
    <string-array name="refresh">
    	<item>Off</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
        <item>120 seconds</item>
    </string-array>
    <string name="settings_layer_style">Layer style:</string>   
    <string-array name="layer_style">
    	<item>cursor</item>
        <item>floater</item>
        <item>simple</item>
        <item>geocities</item>
    </string-array>
    <string name="settings_align">Align </string> 
    <string-array name="alignment">
    	<item>left</item>
        <item>right</item>
        <item>center</item>
    </string-array>
    <string name="settings_padding">Padding: (px)</string>   
    <string-array name="padding">
    	<item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    	<item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    	<item>9</item>
        <item>10</item>
    </string-array>
    <string name="info_padding">px</string>
    <string name="load_ad_button">Load Ad</string>
    <string name="last_request_url">Last Request URL</string>
    <string name="last_server_response">Last Server Response</string>
    
</resources>