<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="4dp"
            android:fillViewport="true"
            android:id="@+id/request_frag">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                style="@style/header"
                android:text="@string/last_request_url"
                />

        <TextView
                android:id="@+id/request_text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:text="@string/request_text"/>

        <TextView
                style="@style/header"
                android:layout_marginTop="12dp"
                android:text="@string/last_server_response"
                />

        <TextView
                android:id="@+id/response_text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:text="@string/response_text"/>        
    </LinearLayout>
</ScrollView>